make duplicate survey i correct way ... update swagger
