# routes/api.php
@@ -43,7 +43,7 @@ Route::group(['middleware' => ['auth:sanctum', 'admin']], function () {
     Route::get('/survey/index/{status}', [SurveyController::class, 'index']);
     Route::put('/survey/archive/{survey}', [SurveyController::class, 'archive']);
     Route::get('/survey/show/{survey}', [SurveyController::class, 'show']);
-    Route::post('/survey/dublicate/{survey}',[SurveyController::class,'dublicate']);
+    Route::post('/survey/duplicate/{survey}',[SurveyController::class,'dublicate']);
     Route::get('/users/isanswer/{survey}', [SurveyController::class, 'getAnswersUser']);
 });
 
